<resources>
    <string name="app_name">POKEDEX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="base_exp">Base Exp.</string>
    <string name="abilities">Abilities</string>
    <string name="types">Types</string>
    <string name="game_index">Game Index</string>
    <string name="version_name">Version Name</string>
    <string name="move">Move</string>
    <string name="level_learned_at">Level Learned at</string>
    <string name="move_learn_method">Move learn Method</string>
    <string name="stats">Stats</string>
    <string name="aditya_nischal">Aditya Nischal</string>
    <string name="pokedex">Pokedex</string>
</resources>
