<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pokemondetails_relativelu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:visibility="gone"
    tools:context=".Fragment.PokemonDetailsFragment">

    <TextView
        android:id="@+id/nointernet_tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/no_internet_connection"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/White"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pokemonname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/id_tv"
        android:textColor="@color/White"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/pokemonimage_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/pokemonname_tv"
        android:layout_centerHorizontal="true" />

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/navigation"
        android:layout_below="@id/pokemonimage_iv">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativelayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/BLUE1">

                <TextView
                    android:id="@+id/heighttext_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/height"
                    android:textColor="@color/WhiteSmoke"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/heightvalue_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/heighttext_tv"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="2"
                    android:textColor="@color/Black"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/weighttext_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/heightvalue_tv"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/weight"
                    android:textColor="@color/WhiteSmoke"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/weightvalue_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/weighttext_tv"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="2"
                    android:textColor="@color/Black"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/baseexp_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/base_exp"
                    android:textColor="@color/WhiteSmoke"

                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/baseexpvalue_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/baseexp_tv"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="2"
                    android:textColor="@color/Black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ability_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/baseexpvalue_tv"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/abilities"
                    android:textColor="@color/WhiteSmoke"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/abilityvalue_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ability_tv"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="2"
                    android:textColor="@color/Black"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativelayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativelayout1">

                <TextView
                    android:id="@+id/stats_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="Stats"
                    android:textAlignment="center"
                    android:textColor="@color/White"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/stats_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stats_tv"
                    android:layout_margin="10dp"
                    android:background="@color/BLUE">

                </android.support.v7.widget.RecyclerView>


                <TextView
                    android:id="@+id/types_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stats_rv"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/types"
                    android:textAlignment="center"
                    android:textColor="@color/White"
                    android:textSize="22sp"
                    android:textStyle="bold" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/types_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/types_tv"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/LightSkyBlue_b" />


            </RelativeLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="start"
        android:background="?android:attr/windowBackground"
        android:foreground="?attr/selectableItemBackground"
        app:itemBackground="@color/WhiteSmoke"
        app:itemTextColor="@color/colorAccent"
        app:menu="@menu/tabs" />


</RelativeLayout>